--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,48 @@ button {
 	background-color: black;
 	color: #fff;
 }
+
+.purchase-form-wrapper {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	background-color: rgba(0, 0, 0, 0.5);
+	background: opaci;
+}
+
+.form {
+	width: 240px;
+	padding: 24px;
+	background-color: var(--main-bg-color);
+	border-radius: 12px;
+}
+
+.form__row {
+	width: 100%;
+	display: flex;
+}
+
+.form__row:not(:first-child) {
+	margin-top: 24px;
+}
+
+.form__row input{
+	width: 100%;
+}
+
+.quantity-input {
+	width: 100%;
+	max-width: 100px;
+	margin-left: auto;
+}
+
+.radio-input {
+	cursor: pointer;
+}
